@@ -210,13 +210,33 @@
         </widget>
        </item>
        <item row="3" column="0">
+        <widget class="QLabel" name="maxAgeLabel">
+         <property name="text">
+          <string>Files added in the last:</string>
+         </property>
+        </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="maxAge">
+        <property name="singleStep">
+         <number>10</number>
+        </property>
+        <property name="suffix">
+         <string> days</string>
+        </property>
+        <property name="specialValueText">
+         <string>No Limit</string>
+        </property>
+       </widget>
+      </item>
+       <item row="4" column="0">
         <widget class="QLabel" name="orderLabel">
          <property name="text">
           <string>Order songs:</string>
          </property>
         </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
       <layout class="QHBoxLayout" name="orderLayout">
        <item>
         <widget class="QComboBox" name="order"/>
