@@ -38,8 +38,8 @@ class SmartPlaylistsPage : public SinglePageWidget
     struct Command {
         Command(const RulesPlaylists::Entry &e=RulesPlaylists::Entry(), int a=0, quint8 prio=0, bool dec=false, quint32 i=0)
             : playlist(e.name), action(a), priority(prio), decreasePriority(dec), ratingFrom(e.ratingFrom), ratingTo(e.ratingTo),
-              minDuration(e.minDuration), maxDuration(e.maxDuration), numTracks(e.numTracks), order(e.order), orderAscending(e.orderAscending),
-              id(i) { }
+              minDuration(e.minDuration), maxDuration(e.maxDuration), maxAge(e.maxAge), numTracks(e.numTracks), order(e.order),
+              orderAscending(e.orderAscending), id(i) { }
         bool isEmpty() const { return playlist.isEmpty(); }
         void clear() { playlist.clear(); includeRules.clear(); excludeRules.clear(); songs.clear(); toCheck.clear(); checking.clear(); }
         bool haveRating() const { return ratingFrom>=0 && ratingTo>0; }
@@ -60,6 +60,7 @@ class SmartPlaylistsPage : public SinglePageWidget
         int ratingTo = 0;
         int minDuration = 0;
         int maxDuration = 0;
+        int maxAge = 0;
         int numTracks = 0;
         RulesPlaylists::Order order = RulesPlaylists::Order_Random;
         bool orderAscending = true;
